--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,40 @@
     transform: rotate(360deg);
   }
 }
+/* .products {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  margin-left: 10px;
+  margin-right: 10px;
+}
+.product {
+  border: 2px solid black;
+  height: 500px;
+  width: 400px;
+}
+.imgresize {
+  width: 100%;
+  height: 400px;
+} */
+.header-div {
+  width: 100%;
+  background: linear-gradient(aqua, blue);
+  height: 1.8rem;
+  margin-bottom: 20px;
+}
+.product-card {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  flex-wrap: wrap;
+}
+.product-card-set {
+  border: 2px solid black;
+  width: 400px;
+  height: 700px;
+}
+.product-image-resize {
+  width: 100%;
+  height: 600px;
+}
